--- a/success.html
+++ b/success.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Failure</title>
+		<title>Success</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -69,7 +69,7 @@
 	<body>
 		<div class="p-5 mb-4 text-bg-dark rounded-3">
 			<div class="container-fluid py-5">
-				<h1 class="display-5 fw-bold">Success!</h1>
+				<h1 class="display-5 fw-bold">Wonderful!</h1>
 				<p class="col-md-8 fs-4">
 					You've been successfully signed up to the newsletter! Please look forwards to a ton of
 					awesome content!
